--- a/package.json
+++ b/package.json
@@ -8,17 +8,14 @@
     "start": "next start",
     "test": "jest --watch",
     "lint": "eslint ./ --ext js",
-    "format": "prettier --write ."
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "format": "prettier --write .",
+    "prepare": "husky install"
   },
   "lint-staged": {
-    "src/**/*.js": [
+    "*.js": [
       "npm run lint",
-      "npm run format"
+      "npm run format",
+      "npm run test"
     ]
   },
   "jest": {
@@ -43,10 +40,13 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
-    "husky": "^5.2.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "simple-git-hooks": "^2.2.0"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
   }
 }
