--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "eslint ./ --ext js",
     "format": "prettier --write .",
     "prepare": "husky install"
   },
   "lint-staged": {
     "*.js": [
+      "npm run test",
       "npm run lint",
-      "npm run format",
-      "npm run test"
+      "npm run format"
     ]
   },
   "jest": {
@@ -40,6 +41,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
+    "husky": "^5.2.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
